--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 	
 }
 body{
-	display:flex;
-	justify-content:center;
+	/* display:flex; */
+	/* justify-content:center; */
 	background-color:#f8f8f8;
 	/* border:5px solid black; */
 	padding:20px;
@@ -20,6 +20,7 @@ body{
 }
 .book{
 	
+	align-items:center;
 	widht:100%;
     /* border:2px solid black; */
 	padding:40px;
@@ -37,13 +38,31 @@ h1{
 	text-align:center;
 	margin-bottom:20px;
 }
-
+/* /* img{
+	display:block;
+	justify-content:center;
+	align-items:center; */
+}
+ */
 .book{
-    /* text-align: center; */
+    text-align: center;
 }
 
 .book img{
     display: block;
     margin: 10px auto;
     width: 200px;
+}
+.book p{
+	color:#777777;
+}
+.book button{
+	color:#2ecc71;
+}
+#heading{
+	background-color:#ffffff;
+	padding:10px;
+	margin-left:20px;
+	margin-right:20px;
+	
 }
